objects/Idea_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>Original_Idea__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Original Idea</label>
        <referenceTo>Ideas__c</referenceTo>
        <relationshipLabel>Linked Ideas</relationshipLabel>
        <relationshipName>Idea_Relationships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Idea__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Related Idea</label>
        <referenceTo>Ideas__c</referenceTo>
        <relationshipLabel>Other Relationships</relationshipLabel>
        <relationshipName>Idea_Relationships1_del</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Relates To</fullName>
                </value>
                <value>
                    <fullName>Duplicates</fullName>
                </value>
                <value>
                    <fullName>Depends On</fullName>
                </value>
                <value>
                    <fullName>Is Dependent Upon By</fullName>
                </value>
                <value>
                    <fullName>Is Duplicated By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Idea Relationship</label>
    <nameField>
        <displayFormat>IR-{000000}</displayFormat>
        <label>Idea Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Idea Relationships</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>